# sample-constraintlayout-bazel-app

./: BUILD.bazel  README.md  WORKSPACE  maven_install.json
src/lib/: AndroidManifest.xml  BUILD.bazel
src/lib/res/layout/: main_layout.xml
src/lib/src/: MyActivity.java
