package(default_visibility = ["//visibility:public"])

load("@rules_android//android:rules.bzl", "android_library")
load("@rules_jvm_external//:defs.bzl", "artifact")

android_library(
    name = "constraint_library",
    srcs = glob([
        "src/**/*.java",
    ]),
    custom_package = "src.lib.src",
    manifest = "AndroidManifest.xml",
    resource_files = glob(["res/**"]),
    deps = [
        artifact("androidx.constraintlayout:constraintlayout"),
        artifact("androidx.constraintlayout:constraintlayout-core"),
    ],
)
